sprint_7/Exc5/non-admin-api-allow.yaml
# 1) policy allow-frontend-backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend
  namespace: development
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values:
          - front-end
          - back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values:
                  - front-end
                  - back-end-api
      ports:
        - protocol: TCP
          port: 80
---
# 2) policy allow-admin-frontend-backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-backend
  namespace: development
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values:
          - admin-front-end
          - admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values:
                  - admin-front-end
                  - admin-back-end-api
      ports:
        - protocol: TCP
          port: 80
